@@ -42,7 +42,7 @@ public class ThreadContextTests extends ESTestCase {
         threadContext.putHeader("foo", "bar");
         threadContext.putTransient("ctx.foo", 1);
         assertEquals("bar", threadContext.getHeader("foo"));
-        assertEquals(new Integer(1), threadContext.getTransient("ctx.foo"));
+        assertEquals(Integer.valueOf(1), threadContext.getTransient("ctx.foo"));
         assertEquals("1", threadContext.getHeader("default"));
         try (ThreadContext.StoredContext ctx = threadContext.stashContext()) {
             assertNull(threadContext.getHeader("foo"));
@@ -55,13 +55,38 @@ public class ThreadContextTests extends ESTestCase {
         assertEquals("1", threadContext.getHeader("default"));
     }
 
+    public void testStashWithOrigin() {
+        final String origin = randomAlphaOfLengthBetween(4, 16);
+        final ThreadContext threadContext = new ThreadContext(Settings.EMPTY);
+
+        final boolean setOtherValues = randomBoolean();
+        if (setOtherValues) {
+            threadContext.putTransient("foo", "bar");
+            threadContext.putHeader("foo", "bar");
+        }
+
+        assertNull(threadContext.getTransient(ThreadContext.ACTION_ORIGIN_TRANSIENT_NAME));
+        try (ThreadContext.StoredContext storedContext = threadContext.stashWithOrigin(origin)) {
+            assertEquals(origin, threadContext.getTransient(ThreadContext.ACTION_ORIGIN_TRANSIENT_NAME));
+            assertNull(threadContext.getTransient("foo"));
+            assertNull(threadContext.getTransient("bar"));
+        }
+
+        assertNull(threadContext.getTransient(ThreadContext.ACTION_ORIGIN_TRANSIENT_NAME));
+
+        if (setOtherValues) {
+            assertEquals("bar", threadContext.getTransient("foo"));
+            assertEquals("bar", threadContext.getHeader("foo"));
+        }
+    }
+
     public void testStashAndMerge() {
         Settings build = Settings.builder().put("request.headers.default", "1").build();
         ThreadContext threadContext = new ThreadContext(build);
         threadContext.putHeader("foo", "bar");
         threadContext.putTransient("ctx.foo", 1);
         assertEquals("bar", threadContext.getHeader("foo"));
-        assertEquals(new Integer(1), threadContext.getTransient("ctx.foo"));
+        assertEquals(Integer.valueOf(1), threadContext.getTransient("ctx.foo"));
         assertEquals("1", threadContext.getHeader("default"));
         HashMap<String, String> toMerge = new HashMap<>();
         toMerge.put("foo", "baz");
